// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attach 1`] = `
Array [
  Object {
    "payload": Object {
      "id": "123",
    },
    "type": "ns/LOAD_USER",
  },
  Object {
    "payload": Object {
      "user": Object {
        "id": "123",
        "name": "user",
      },
    },
    "type": "ns/USER_LOADED",
  },
]
`;

exports[`attach 2`] = `
Array [
  Array [
    "123",
  ],
]
`;

exports[`should delete user 1`] = `
Array [
  Object {
    "payload": Object {
      "id": "123",
    },
    "type": "ns/DELETE_USER",
  },
  Object {
    "type": "ns/SHOW_CONFIRM_DELETE",
  },
  Object {
    "payload": Object {
      "result": "yes",
    },
    "type": "ns/CONFIRM_DELETE",
  },
  Object {
    "payload": Object {
      "id": "123",
    },
    "type": "ns/USER_DELETED",
  },
]
`;

exports[`should delete user 2`] = `
Array [
  Array [
    "123",
  ],
]
`;

exports[`should load user 1`] = `
Array [
  Object {
    "payload": Object {
      "id": "123",
    },
    "type": "ns/LOAD_USER",
  },
  Object {
    "payload": Object {
      "user": Object {
        "id": "123",
        "name": "user",
      },
    },
    "type": "ns/USER_LOADED",
  },
]
`;

exports[`should load user 2`] = `
Array [
  Array [
    "123",
  ],
]
`;

exports[`should load user error 1`] = `
Array [
  Object {
    "payload": Object {
      "id": "123",
    },
    "type": "ns/LOAD_USER",
  },
  Object {
    "payload": Object {
      "message": "foo",
    },
    "type": "ns/ERROR_OCCURRED",
  },
]
`;

exports[`should load user error 2`] = `
Array [
  Array [
    "123",
  ],
]
`;

exports[`should load user with delay 1`] = `
Array [
  Object {
    "payload": Object {
      "id": "1",
    },
    "type": "ns/LOAD_USER_DELAY",
  },
  Object {
    "payload": Object {
      "id": "2",
    },
    "type": "ns/LOAD_USER_DELAY",
  },
  Object {
    "payload": Object {
      "id": "3",
    },
    "type": "ns/LOAD_USER_DELAY",
  },
  Object {
    "payload": Object {
      "user": Object {
        "id": "3",
        "name": "user",
      },
    },
    "type": "ns/USER_LOADED",
  },
]
`;

exports[`should load user with delay 2`] = `
Array [
  Array [
    "1",
  ],
  Array [
    "2",
  ],
  Array [
    "3",
  ],
]
`;

exports[`should load user with filter 1`] = `
Array [
  Object {
    "payload": Object {
      "id": "test",
    },
    "type": "ns/LOAD_USER_FILTER",
  },
  Object {
    "payload": Object {
      "user": Object {
        "id": "test",
        "name": "user",
      },
    },
    "type": "ns/USER_LOADED",
  },
]
`;

exports[`should load user with filter 2`] = `
Array [
  Array [
    "test",
  ],
]
`;

exports[`should load user with filter if the filter does not match 1`] = `
Array [
  Object {
    "payload": Object {
      "id": "abc",
    },
    "type": "ns/LOAD_USER_FILTER",
  },
]
`;

exports[`should load user with filter if the filter does not match 2`] = `Array []`;
